<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <LinearLayout
        style="@style/linearHorizontal" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"

            style="@style/button"
            android:background="@drawable/ic_button"

            android:text="@string/_1"
            app:backgroundTintMode="screen" />

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button2"
            android:text="@string/_2"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button" />

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button3"
            android:text="@string/_3"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/buttonPlus"
            android:text="@string/_plus"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>
    </LinearLayout>

    <LinearLayout
        style="@style/linearHorizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button4"
            android:text="@string/_4"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button5"
            android:text="@string/_5"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button6"
            android:text="@string/_6"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/buttonMinus"
            android:text="@string/_minus"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>
    </LinearLayout>

    <LinearLayout
        style="@style/linearHorizontal" >

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button7"
            android:text="@string/_7"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button8"
            android:text="@string/_8"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button9"
            android:text="@string/_9"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button" />

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/buttonMultiply"
            android:text="@string/_multiply"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>
    </LinearLayout>

    <LinearLayout
        style="@style/linearHorizontal" >

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/button0"
            android:text="@string/_0"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/buttonDot"
            android:text="@string/_dot"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/buttonEquals"
            android:text="@string/_equals"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/buttonShare"
            android:text="@string/_share"

            app:backgroundTintMode="screen"
            android:background="@drawable/ic_button"/>

    </LinearLayout>

</LinearLayout>